# c-icap-allow2

./: .gitignore  INSTALL  LICENSE  Makefile.am  README.md  RECONF  aclocal.m4  autoconf.h.in  autoconf.h.in~  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
services/: Makefile.am
services/allow2/: .gitignore  Makefile.am  classify.c  fortiguard_lut.csv  makefile.w32  srv_allow2.c
